--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,1 @@
-{
-    "version": 2,
-    "builds": [
-      { "src": "index.html", "use": "@vercel/static-build" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/" }
-    ]
-  }
-  
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
